--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <h3>Watch anywhere,cancel anytime. </h3>
     <p>Ready to watch? Enter your email to create or restart your membership.</p>
     <form class="email-signup">
-    <input type="email" placeholder="Email Address" re><button href="mailto:sp284303@gmail.com">go</button>
+    <input type="email" placeholder="Email Address" re><button href="https://multimovies.art/">go</button>
     </form> 
  </div>
  </div>
