--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <img src="logo.png" class="logo">
         <div>
         <button  onclick="location.href='https://multimovies.art'">login</button>
-        <button class="language-btn">English<img src="C:\Users\Admin\Desktop\images\down-icon.png"></button>
+        <button class="language-btn">English<img src="down-icon.png"></button>
         </div>
         </nav>
  <div class="header-content">
