--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav>
         <img src="multimovies.jpg" class="logo">
         <div>
-        <button  onclick="location.href='https://multimovies.art'">login</button>
+        <button  onclick="location.href='https://multimovies.host'">login</button>
         <button class="language-btn">English<img src="down-icon.png"></button>
         </div>
         </nav>
