--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <small>Ready to watch?Enter your email to create or restart your membership.</small>
     <small> <form class="email-signup">
         <input type="email" placeholder="Email Address" re><button href="mailto:sp284303@gmail.com">go</button>
-        </form> x</small>
+        </form> </small>
 </div>
 </body>
 </html>
